<resources>
    <string name="app_name">Pac Man</string>
    <string name="points">Points:</string>
    <string name="move_right">Rigth</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="time">Time:</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="continu">Go</string>
    <string name="time_left">Time Left</string>
</resources>